[project]
name = "buehrle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "dbt-duckdb>=1.10.1",
    "dlt[duckdb]>=1.24.0",
    "pandas>=2.3.3",
    "polars>=1.0.0",
    "prefect>=3.6.2",
    "pybaseball",
    "requests>=2.32.5",
]

[tool.uv.sources]
pybaseball = { git = "https://github.com/MichaelGFagan/pybaseball.git", rev = "413003a0c854b4a4bb64ff27fed915f4d995056e" }
