[project]
name = "buehrle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.10.1",
    "dlt[duckdb]>=1.24.0",
    "pandas>=2.3.3",
    "polars>=1.0.0",
    "prefect>=3.6.2",
    "pybaseball",
    "requests>=2.32.5",
]

[project.scripts]
buehrle = "loaders.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loaders"]

[tool.uv.sources]
pybaseball = { git = "https://github.com/MichaelGFagan/pybaseball.git", rev = "413003a0c854b4a4bb64ff27fed915f4d995056e" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "responses>=0.26.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:'loaders.*' found in sys.modules:RuntimeWarning",
]

[tool.coverage.run]
source = ["loaders"]

[tool.coverage.report]
fail_under = 90
show_missing = true
